--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/style.css">
+  <script src="js/script.js" defer ></script>
   <title>Document</title>
 </head>
 <body>
@@ -51,7 +52,7 @@
     </section>
     <section class="about">
       <div class="container">
-        <div class="about__top">
+        <div class="about__top grid">
           <div class="about__col">
             <ul class="list-reset about__list">
               <li class="about__item">
@@ -82,9 +83,14 @@
             </div>
           </div>
         </div>
-        <div class="about-video">
-          <video src=""></video>
-          <button class="btn-reset about__play" aria-label="Play video"></button>
+        <div class="about__video">
+          <video src="img/Friends walking along a seashore.mp4" poster="img/poster-video.jpg" muted preload="metadata" playsinline></video>
+          <button class="btn-reset about__play" aria-label="Play video">
+            <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <circle cx="50" cy="50" r="50" fill="white"/>
+              <path d="M63 50L44.25 62.9904L44.25 37.0096L63 50Z" fill="#1D1D1F"/>
+              </svg>              
+          </button>
         </div>
       </div>
     </section>
