--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h2 class="visually-hidden">Portfolio</h2>
       <div class="container">
         <ul class="list-reset portfolio__list">
-          <li class="portfolio-item portfolio-item--reverse ">
+          <li class="portfolio-item grid">
             <div class="portfolio-item__col">
               <h3 class="portfolio__title">Et&nbsp;odio</h3>
               <p class="portfolio__descr">Mauris eget nec nulla dolor&nbsp;ex. Sodales luctus pellentesque cras ornare lorem luctus lectus sed consectetur quam, est. Libero, odi</p>
@@ -108,7 +108,7 @@
               <img class="portfolio-item__image" src="img/port-1.jpg" alt="" srcset="">
             </div>
           </li>
-          <li class="portfolio-item portfolio-item--reverse ">
+          <li class="portfolio-item portfolio-item--reverse grid">
             <div class="portfolio-item__col">
               <h3 class="portfolio__title">Integer dapibus dictum</h3>
               <p class="portfolio__descr">it&nbsp;pulvinar tempus amet dolor dui vulputate tortor, luctus lorem in&nbsp;nunc eleifend ipsum justo et&nbsp;venenatis dictumst. </p>
