--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <img src="img/services.jpg" alt="" class="services__image" aria-hidden="true">
       <div class="container">
         <ul class="list-reset services__list">
-          <li class="services-item">
+          <li class="services-item grid">
             <div class="services-item__col">
               <h3 class="services__title">Branding</h3>
             </div>
@@ -149,7 +149,7 @@
               </p>
             </div>
           </li>
-          <li class="services-item">
+          <li class="services-item grid">
             <div class="services-item__col">
               <h3 class="services__title">Web-apps</h3>
             </div>
@@ -159,7 +159,7 @@
               </p>
             </div>
           </li>
-          <li class="services-item">
+          <li class="services-item grid">
             <div class="services-item__col">
               <h3 class="services__title">Design</h3>
             </div>
@@ -169,7 +169,7 @@
               </p>
             </div>
           </li>
-          <li class="services-item">
+          <li class="services-item grid">
             <div class="services-item__col">
               <h3 class="services__title">Strategy</h3>
             </div>
