--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
           </div>
         </div>
         <div class="about__video">
-          <video src="img/video.mp4" poster="img/poster-video.jpg" muted preload="metadata" playsinline></video>
+          <video src="img/Friends walking along a seashore.mp4" poster="img/poster-video.jpg" muted preload="metadata" playsinline></video>
           <button class="btn-reset about__play" aria-label="Play video">
             <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
               <circle cx="50" cy="50" r="50" />
